<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/gradeGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:checkedButton="@id/radio2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNameGrade"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/name" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/two" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/three" />

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/four" />

        <RadioButton
            android:id="@+id/radio5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/five" />
    </RadioGroup>

</LinearLayout>